# MolCrawl

./: .editorconfig  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  EXPERIMENT_TRACKING_ARCHITECTURE.md  EXPERIMENT_TRACKING_QUICKSTART.md  EXPERIMENT_TRACKING_README.md  EXPERIMENT_TRACKING_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  compoundでの検証手順.md  environment.yaml  index.html  omim_real_data_processor.html  pyproject.toml  run_bert_proteingym_data_prep.sh  run_bert_proteingym_evaluation.sh  run_bert_proteingym_visualization.sh  setup.cfg  setup.py  test_experiment_system.py  update_ncbi.html  update_taxonomy_complete.html  validate_rna_encoding.html
.github/: CI_CD_GUIDE.md  RUFF_SETUP.md
api/: index.html  omim_real_data_processor.html
bert/: README.md  README_test.md  clinvar_evaluation.py  clinvar_visualization.py  configurator.py  fine-tuning.py  index.html  main.py  molecule_nl_evaluation.py  protein_classification_evaluation.py  proteingym_data_preparation.py  proteingym_evaluation.py  test_checkpoint.py  visualization.py
bootstraps/: 00_first.sh  01-compounds_prepare.sh  01-protein_sequence-prepare.sh  01-rna-prepare.sh  01_compounds-guacamol-prepare.sh  01_compounds_prepare.sh  01_genome-sequence_prepare.sh  01_molecule-nl_prepare.sh  01_protein-sequence_prepare.sh  01_rna_prepare.sh  01a_molecule-nl_prepare-refine.sh  02-genome_sequence-prepare-gpt2.sh  02-molecule_nl-prepare-gpt2.sh  02-protein_sequence-prepare-gpt2.sh  02-rna-prepare-gpt2_yigarashi.sh  03a-compounds-guacamol-train-large.sh  03a-compounds-guacamol-train-medium.sh  03a-compounds-guacamol-train-small.sh  03a-compounds-guacamol-train-xl.sh  03a-compounds_guacamol-train-large.sh  03a-compounds_guacamol-train-medium.sh  03a-compounds_guacamol-train-small.sh  03a-compounds_guacamol-train-xl.sh  03a-genome_sequence-train-large.sh  03a-genome_sequence-train-medium.sh  03a-genome_sequence-train-small.sh  03a-genome_sequence-train-xl.sh  03a-molecule-train-large.sh  03a-molecule-train-medium.sh  (+43 more)
esm2/: main.py  (+2 more)
(+2258 files in other folders)
