[build-system]
requires = ["setuptools~=67.6.1", "wheel~=0.40.0", "pip~=23.0.1"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 128
target-version = ["py39"]

[tool.ruff]
# Python version compatibility
target-version = "py39"

# Line length (same as black)
line-length = 128

# Exclude patterns
exclude = [
    ".git",
    ".ruff_cache",
    "__pycache__",
    "miniconda",
    "learning_source_*",
    "runs_train_*",
    "gpt2-output*",
    "*.egg-info",
    "build",
    "dist",
]

# Enable specific rule categories
lint.select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "B",   # flake8-bugbear
]

# Ignore specific rules
lint.ignore = [
    "E501",  # Line too long (handled by formatter)
    "B905",  # zip() without strict parameter
]

# Allow fix for all enabled rules
lint.fixable = ["ALL"]
lint.unfixable = []

# Allow unused variables when underscore-prefixed
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Ignore specific rules in test files
"test_*.py" = ["F401", "F811"]
"**/test_*.py" = ["F401", "F811"]
