[metadata]
name = riken_dataset_for_fundational_models
description = "Riken dataset fundational model package"
version = 1.0.0
long_description = file: README.md
long_description_content_type = text/markdown
author = Elix Inc.

[options]
packages = find:
package_dir =
    =src

[options.packages.find]
where = src
